@@ -5,6 +5,7 @@
 Version 5.22, unreleased
 Default Qt Client
 - Updated Qt to 6.10.0 on Windows and macOS
+- Option to disable sound device detection notifications in statusbar events
 Android Client
 - Fixed bug where join and leave events were not announced when focused on another channel
 - Join last channel checkbox is now disabled by default in Server Properties Dialog
